# Omar_Said_Lab

./: CMakeLists.txt  Cartella.cpp  Cartella.h  Controller.cpp  Controller.h  Date.cpp  Date.h  Model.cpp  Model.h  Note.cpp  Note.h  Observer.h  Raccoglitore.cpp  Raccoglitore.h  Subject.h  View.cpp  View.h  main.cpp  wx.cpp
test/: CMakeLists.txt  ClassTest.cpp  RaccoglietoreFixture.cpp  RaccoglitoreTest.cpp  runAllTest.cpp
